--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2322,7 +2322,7 @@ form {
 
 #position .col .inner {
 	display: flex;
-	height: 100%;
+	/* height: 100%; */
 	/* background: #fff; */
 	/* border-radius: 20px; */
 	/* box-shadow: rgb(15 105 92 / 15%) 0 16px 48px 0; */
@@ -3197,7 +3197,7 @@ html {
 
 #video1 {
 	min-height: 100vh;
-	background: url(../images/contact.jpg);
+	/* background: url(../images/contact.jpg); */
 	background-size: cover;
 	background-position: center;
 	background-repeat: no-repeat;
